# CONSCIOUS-AI-SAFE

./: README.md
.emergent/: emergent.yml
The-human-ai-brain-main/: .gitignore  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  ARCHITECTURE.md  C++.html  CMakeLists.txt  CMakePresets.json  COMPLETE_PACKAGE_SUMMARY.md  CRITICAL_REVISIONS_SUMMARY.md  Collapse.txt  Decoherence_Solution_Report.md  Dockerfile  Document.txt  Explain-1.txt  FDQC_Parameter_Justification_and_Sensitivity_Analysis.md  FDQC_v3.1_SECTION_VI_Empirical_Validation_REVISED.md  Final.txt  GRPC_SERVER_GUIDE.md  IMPLEMENTATION_27_ITEMS.md  IMPLEMENTATION_SUMMARY.md  Implementation.txt  Layout 1.txt  Layout 2.rtf  Layout v2.html  MATHEMATICS.md  Memory.txt  OW4X1-fractal_dynamic_quantum_consciousness_fdqc_v4.md  PHASE1_COGNITIVE_MODULES_COMPLETE.md  PHASE_2_COMPLETION_SUMMARY.md  PPO Controller .txt  PROJECT_INDEX.md  Production.txt  QUICKSTART.md  README.md  (+25 more)
The-human-ai-brain-main/.github/workflows/: azure-kubernetes-service.yml  black-duck-security-scan-ci.yml  cmake-single-platform.yml  codeql.yml  fortify.yml
The-human-ai-brain-main/Cockpit-main/: CMakeLists.txt
The-human-ai-brain-main/Cockpit-main/src/: change_audit.cpp  collapse.cpp  imagination_engine.cpp  kill.cpp  main.cpp  meta_monitor.cpp  self_writer.cpp
The-human-ai-brain-main/Cockpit-main/tests/: cockpit_tests.cpp  test_collapse.cpp
The-human-ai-brain-main/configs/: logging.yaml  policy.json  quantum.yaml
The-human-ai-brain-main/ingest_cpp/: .gitignore  CHANGELOG.md  CMakeLists.txt  INTEGRATION.md  QUICKSTART.md  README.md  TEST_RESULTS.md  config.example.json  embed_service.py  mock_ocr_service.py  qdrant_cloud.json
The-human-ai-brain-main/ingest_cpp/include/brain/: base64.hpp  chunker.hpp  config.hpp  ocr_client.hpp  pdf_render.hpp
The-human-ai-brain-main/ingest_cpp/scripts/: run_full_test.sh  start_services.sh  stop_services.sh  test_pipeline.sh  validate_setup.sh
The-human-ai-brain-main/ingest_cpp/src/: base64.cpp  build_jsonl.cpp  chunker.cpp  ocr_client.cpp  pdf_render.cpp  rag_index.cpp
The-human-ai-brain-main/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  service.yaml
The-human-ai-brain-main/kernel/: CMakeLists.txt
The-human-ai-brain-main/kernel/demos/: interactive_demo.cpp
The-human-ai-brain-main/kernel/include/brain/: affective.hpp  audit.hpp  brain_system.hpp  config_validate.hpp  datasets.hpp  decoder.hpp  epistemic_drive.hpp  gw.hpp  memory.hpp  metrics.hpp  policy.hpp  theory_of_mind.hpp  tiered_memory.hpp  trainer.hpp  wiring.hpp
The-human-ai-brain-main/kernel/proto/: brain.proto
The-human-ai-brain-main/kernel/server/: main.cpp
The-human-ai-brain-main/kernel/src/: affective.cpp  audit.cpp  brain_service.cpp  brain_system.cpp  config_validate.cpp  datasets.cpp  decoder.cpp  epistemic_drive.cpp  gw.cpp  memory.cpp  metrics.cpp  policy.cpp  qw.cpp  theory_of_mind.cpp  tiered_memory.cpp  trainer.cpp  utils.cpp  wiring.cpp
The-human-ai-brain-main/kernel/tests/: benchmark.cpp  brain_system_tests.cpp  cognitive_tests.cpp  minimal_test.cpp  qw_tests.cpp  simple_benchmark.cpp  simple_test.cpp  standalone_test.cpp  test_collapse_debug.cpp  test_lindblad_cleanup.cpp  test_metrics.cpp  test_qw_heap.cpp  tiered_memory_tests.cpp
The-human-ai-brain-main/scripts/: build.sh  deploy.sh  test.sh
brain-ai/: CMakeLists.txt  PERFORMANCE_REPORT.md  README.md  README.md.old  README_COMPLIANCE.md  RUNBOOK.md  brain_pb2.py  brain_pb2_grpc.py  client_test.py  test_client.py
brain-ai/.github/workflows/: ci.yml
brain-ai/configs/: seccomp.json  system.yaml
brain-ai/data/: brain.db
brain-ai/docker/: Dockerfile
brain-ai/include/brain_ai/: cache.hpp  config.hpp  filters.hpp  http_server.hpp  metrics.hpp
brain-ai/include/brain_ai/core/: graph.hpp  memory_index.hpp  qw.hpp  qw_simple.hpp  utils.hpp
brain-ai/k8s/: deployment.yaml  hpa.yaml  networkpolicy.yaml  service.yaml
brain-ai/proto/: brain.proto
brain-ai/src/: brain_server.cpp  filters.cpp  memory_factory.cpp  metrics.cpp  qw.cpp
brain-ai/src/graph/: graph.cpp
brain-ai/src/memory/: faiss.cpp  hnswlib.cpp
brain-ai/tests/: test_graph.cpp  test_memory.cpp  test_qw.cpp
brain-ai/tools/: bench_evolution.cpp  bench_recall.cpp  reindex.cpp  search.cpp  test_components.cpp  test_config.cpp
